--- a/4.html
+++ b/4.html
@@ -16,7 +16,7 @@
   <body>
     <h1 class="bg-dark text-light p-3">Hello World</h1>
     <div class="bg-secondary text-light p-2">Hello World</div>
-    <div class="bg-info p-2 mt-1">Hello WOrld</div>
+    <div class="bg-primary p-2 mt-1">Hello WOrld</div>
 
     <div class="border border-4 border-primary rounded p-2 mt-1">
       Hello World
