--- a/6.html
+++ b/6.html
@@ -15,13 +15,7 @@
   </head>
   <body>
     <div
-      class="
-        bg-dark
-        d-flex
-        flex-column
-        justify-content-center
-        align-items-center
-      "
+      class="bg-primary d-flex flex-column justify-content-center align-items-center"
       style="height: 100vh"
     >
       <div class="fs-1 text-light">Google Search</div>
