--- a/3.html
+++ b/3.html
@@ -15,7 +15,7 @@
   <body>
     <h1>Hello Bootstrap</h1>
     <input
-      class="form-control form-control-lg mb-1"
+      class="form-control form-control-lg mb-"
       type="text"
       placeholder="Enter Username"
     />
