--- a/7.html
+++ b/7.html
@@ -19,6 +19,11 @@
   </head>
   <body>
     <h1>Working with Button</h1>
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <button type="button" class="btn btn-primary">Left</button>
+      <button type="button" class="btn btn-primary">Middle</button>
+      <button type="button" class="btn btn-primary">Right</button>
+    </div>
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
       <strong>Holy guacamole!</strong> You should check in on some of those
       fields below.
@@ -30,7 +35,7 @@
       ></button>
     </div>
     <input
-      class="btn btn-dark btn-lg w-100"
+      class="btn btn-primary btn-lg w-100"
       type="button"
       value="Send Message"
     />
@@ -140,15 +145,7 @@
     <button type="button" class="btn btn-primary position-relative">
       Inbox
       <span
-        class="
-          position-absolute
-          top-0
-          start-100
-          translate-middle
-          badge
-          rounded-pill
-          bg-danger
-        "
+        class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
       >
         99+
         <span class="visually-hidden">unread messages</span>
